<b>2008-12-23</b>

* Clearer warnings when importing CSV data with OpenFlights IDs
* Bug: Business class identifier "B" now accepted in CSV (2457376)
* Bug: American-style MM/DD/YYYY dates now accepted (2457381)
* Bug: Spurious warnings when importing data with no airline names fixed

<b>2008-12-22</b>

* Ability to edit your own airports added.
* GAD airports can now be loaded for airport entry.
* Seat number, seat type cleared after adding new flight.
* When viewing user profiles, map focused only on initial load.

<b>2008-12-15</b>

* Megafilter (class, distance, note, reason, reg) added
* "Not in trip" filter option added
* Filter handling rationalized into php/filter.php:getFilterString()
* Completed elite level handling framework

<b>2008-12-14</b>

* Clear flights after adding them in Basic mode
* Show "Saving..." while AJAX operations are pending
* Bug: Erase "current" flight from map when exiting Basic mode

<b>2008-12-13</b>

* Introduce "Basic" multi-flight adding tool
* Configurable setting for selecting basic/detailed editor
* Same font now used throughout interface
* Top 10 users by popularity now listed in About
* Bug: Distance/duration no longer lost on editing flight

<b>2008-12-10</b>

* Fixed some GC path rendering bugs, minor optimization

<b>2008-12-09</b>

* Bug: Fix plane name handling in some FlightMemory imports

<b>2008-12-08</b>

* Bug: Airline ID 0 now mapped to -1 (unknown)

<b>2008-12-07</b>

* Flight map only redrawn after major edits
* Faster marker rendering for filter, add, delete, edit
* "LOADING" tag shown until map rendering completed
* No more pink tiles when MetaCarta is down (only white ones...)

<b>2008-12-05</b>

* Popup "List" button changed to icon
* Airport selection for input now via popup
* Flight path being edited or added now drawn on map
* Some memory leaks fixed
* Flight lists drawn faster on IE
* No longer possible to "stack" multiple adds/edits

<b>2008-12-03</b>
