@@ -1,3 +1,7 @@
+<b>2008-12-25</b>
+
+* More accurate airline name matching for FM imports when flight number is not provided
+
 <b>2008-12-23</b>
 
 * Clearer warnings when importing CSV data with OpenFlights IDs
